fix: aligning icons

--- a/src/components/BestSellerChart/BestSellerCard/styles.module.scss
+++ b/src/components/BestSellerChart/BestSellerCard/styles.module.scss
@@ -8,6 +8,7 @@
 
   display: flex;
   flex-direction: row;
+  align-items: center;
   gap: 24px;
   background-color: base.$background-color;
   @mixin productRanking {
