--- a/src/components/ChartContainer/styles.module.scss
+++ b/src/components/ChartContainer/styles.module.scss
@@ -37,13 +37,16 @@
 }
 
 .infoIcon {
-  padding: 8px;
-  font-size: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 46px;
   color: base.$neutral-color-3;
 }
 .filterIcon {
   width: 40px;
-  height: 40px;
+  max-height: 40px;
   padding: 8px;
   font-size: 24px;
   color: base.$neutral-color-2;
